--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-starter-temp1.0.1",
-  "version": "0.1.0",
+  "name": "bartender-project",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
