--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bartender-project",
-  "version": "1.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,17 +9,36 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.0"
+    "@headlessui/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
+    "@types/nprogress": "^0.2.3",
+    "@types/react": "^19.0.2",
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "date-fns": "^4.1.0",
+    "lucide-react": "^0.468.0",
+    "next": "^15.1.2",
+    "nextjs-progressbar": "^0.0.16",
+    "nprogress": "^0.2.0",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.7",
+    "react-datepicker": "^7.5.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.54.1",
+    "react-icons": "^5.4.0",
+    "react-markdown": "^9.0.1",
+    "react-markdown-editor-lite": "^1.3.4",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-toc": "^9.0.0",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
+    "swr": "^2.2.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.0",
-    "@eslint/eslintrc": "^3"
+    "@types/next": "^8.0.7",
+    "@types/node": "^22.10.2",
+    "typescript": "5.7.2"
   }
 }
