--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -15,7 +15,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "paths": {
       "@/*": [
@@ -23,7 +23,9 @@
       ]
     },
     "types": [
-      "@types/node"
+      "@types/node",
+      "@types/react",
+      "@types/react-dom",
     ]
   },
   "include": [
