--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "typescript": "^5.7.2"
   },
   "devDependencies": {
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
     "eslint": "^9.17.0"
   }
 }
