--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@types/nprogress": "^0.2.3",
-    "@types/react": "^19.0.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -23,7 +22,7 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
@@ -39,6 +38,9 @@
   "devDependencies": {
     "@types/next": "^8.0.7",
     "@types/node": "^22.10.2",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "eslint": "^9.17.0",
     "typescript": "5.7.2"
   }
 }
