--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
     "mongoose": "^8.9.2",
+    "socket.io": "^4.8.1",
     "yup": "^1.6.1"
   }
 }
