--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@react-google-maps/api": "^2.20.5",
     "@types/nprogress": "^0.2.3",
+    "@types/react-time-picker": "^4.0.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -28,6 +29,7 @@
     "react-icons": "^5.4.0",
     "react-markdown": "^9.0.1",
     "react-markdown-editor-lite": "^1.3.4",
+    "react-time-picker": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "remark-toc": "^9.0.0",
