--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,6 @@
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.2",
     "nextjs-progressbar": "^0.0.16",
     "nprogress": "^0.2.0",
     "react": "^18.3.1",
@@ -44,7 +43,10 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "eslint": "^9.17.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-next": "^15.1.5",
+    "next": "^15.1.5",
     "typescript": "5.7.2"
   }
 }
