--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.5",
     "@types/nprogress": "^0.2.3",
     "@types/react-time-picker": "^4.0.3",
+    "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
@@ -46,7 +47,7 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.5",
-    "next": "^15.1.5",
+    "next": "^15.1.6",
     "typescript": "5.7.2"
   }
 }
