--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@vercel/speed-insights": "^1.1.0",
     "bootstrap": "^5.3.3",
+    "next": "^15.1.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "typescript": "^5.7.2",
