--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.1",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.13.0",
     "@types/yup": "^0.29.14",
     "eslint": "^9.17.0",
     "globals": "^15.14.0",
@@ -26,6 +26,7 @@
     "typescript-eslint": "^8.18.1"
   },
   "dependencies": {
+    "apn": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "envalid": "^8.0.0",
